--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+libft/.DS_Store
 main.o 
 map.o 
 solver.o
@@ -72,3 +73,4 @@ libft/ft_strtrim.o
 libft/ft_tolower.o
 libft/ft_toupper.o
 libft/libft.a
+new/
